# NCL

./: .dockerignore  .env.template  .gitignore  CLAUDE.md  Dockerfile  README.md  STATUS.md  code-health-report.md  docker-compose.yml  package-lock.json  pyproject.toml
.claude/: settings.local.json
.claude/skills/code-health/: SKILL.md
.github/workflows/: docker-build.yml
data/: agent-questions.md  test_email.eml  vessel-list.csv
data/archive/02c1307f24a6576d/: email.eml.md  metadata.json
data/archive/9c6aae7aa8c0b9a9/: email.eml  email.eml.md  metadata.json
docs/: README.md  STATE_SHARING_IMPLEMENTATION.md  architecture.md  authentication.md  features.md  ingest-flow-tests.md  ingest-flow.md  ingest-update-flow.md  langgraph-migration-plan.md  maritime-enrichment.md  mtss-overview.md  processing-flow.md  rag-optimization-plan.md  stage-2-source-display.md
docs/investigation/: 00-master-tracking.md  01-cost-estimation.md  02-local-storage-design.md  03-data-recovery-plan.md  06a-optimization-cost-reduction.md  06b-optimization-retrieval-quality.md  06c-optimization-processing-speed.md  06d-parser-alternatives.md  06e-llm-provider-comparison.md  07a-response-search-optimization.md  07b-response-scenario-analysis.md  09-test-validation-plan.md
docs/investigation/plans/: 00-critical-fixes-plan.md  01-critical-fixes.md  02-implementation.md  03-test-validation.md  04-remaining-optimizations.md  06b-review-findings.md  06c-review-findings.md  07a-review-findings.md  09-test-validation-execution.md  decisions-and-progress.md  estimate-full-results.md  implementation-plan.md  local-storage-sqlite-vs-files.md  optimization-plan.md  parser-validation-results.md
frontend/: .env.local.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx
frontend/src/components/: ChatContainer.tsx  Layout.tsx  ProtectedRoute.tsx  Sources.tsx  auth.tsx  ui.tsx
frontend/src/styles/: globals.css
frontend/src/test/: setup.ts
frontend/src/types/: rag.ts  sources.ts
migrations/: 000_schema.sql  001_embedding_mode.sql  001_initial_schema.sql  001_topic_rewrite_rpc.sql  002_file_registry.sql  002_ingest_events.sql  002_topic_query_perf.sql  003_match_chunks_gin_topics.sql  003_vessel_class_and_cleanup.sql  004_match_chunks_hnsw_direct.sql  004_topics.sql  004b_fix_topic_filter.sql  004c_fix_topic_filter_operator.sql  005_conversations_list_perf.sql  005_fix_archive_uris.sql  006_function_search_path.sql  006_vessel_aliases.sql  007_hybrid_search.sql  007_search_path_extensions.sql  prod_2026-04-22_rag_perf.sql
reports/context-summary-measurement/: 20260429T204359Z.json  20260429T204359Z.md
reports/vessel-mismatch/: README.md  extractor_noise.txt  generate.py  untracked_parking.txt  web_lookup_summary.md
scripts/: analyze_rag_utility.py  annotate_unknown_vessel_mentions.py  apply_migration.py  apply_vessel_name_mapping.py  audit_vessel_mentions.py  backfill_attachment_topic_ids.py  backfill_cache_meta.py  backfill_processing_metadata.py  backfill_v5_email_topics.py  bakeoff_topic_extractor.py  diagnose_topic_uuid_integrity.py  diagnose_vessel_uuid_integrity.py  embed_repaired_stubs.py  export_vessel_mapping_csv.py  fix_bom_corruption.py  fix_local_vessel_metadata.py  measure_context_summary_swap.py  migrate_archive_keys.py  migrate_folder_prefix.py  migrate_image_attachment_types.py  migrate_to_sqlite.py  profile_topic_filter.py  propose_mode_fixes.py  regen_missing_md_from_chunks.py  repair_failed_llamaparse_attachments.py  repair_image_embedding_modes.py  repair_metadata_only_missing_chunks.py  repair_processing_log_schema.py  repair_zip_archives.py  retag_vessel_ids_from_db.py  run_test_ingest.ps1  smoke_query_agent.py  snapshot_vessel_uuids.py  sync_attachment_topic_ids_to_supabase.py  test_rewrite_topic_ids_live.py  tune_topic_filter.py  validate_backup.py  validate_db_schema.py  validate_parsers.py  validate_parsers_extended.py
src/mtss/: __init__.py  _io.py  cli.py  config.py  image_filter.py  llm_privacy.py  utils.py  version.py
src/mtss/api/: __init__.py  agent.py  conversations.py  deps.py  feedback.py  main.py  streaming.py
src/mtss/cli/: __init__.py  _common.py  admin_cmd.py  backup_cmd.py  entities_cmd.py  eval_cmd.py  import_cmd.py  ingest_cmd.py  ingest_reporting.py  maintenance_cmd.py  query_cmd.py  reembed_cmd.py  review_modes_cmd.py  validate_cmd.py
src/mtss/ingest/: __init__.py  archive_generator.py  attachment_handler.py  (+10 more)
src/ncl/: __init__.py  cli.py  config.py  utils.py  version.py
tests/: __init__.py  conftest.py  local_storage.py  repro_issue.py  test_analyze_rag_utility.py  test_api_agent.py  test_api_auth.py  test_api_citations.py  test_api_conversations.py  test_api_deps.py  test_api_feedback.py  test_api_gzip.py  test_api_security.py  test_api_spa_static.py  test_api_streaming.py  test_api_vessel_cache_routes.py  test_archive_generator.py  test_archive_storage.py  test_archive_sync.py  test_archive_uris.py  test_async_upload.py  test_attachment_processor.py  test_backfill_cache_meta.py  test_backfill_v5.py  test_backup_cmd.py  test_chunk_strategies.py  test_citation_processor.py  test_domain_vessel_upsert.py  test_email_cleaner.py  test_embedding_decider.py  test_eml_parser.py  test_entities_cli.py  test_estimator.py  test_gemini_pdf_parser.py  test_image_attachment_archive.py  test_image_filter.py  test_import_archives_concurrency.py  test_import_roundtrip.py  test_ingest_consistency.py  test_ingest_flow.py  (+30 more)
tests/eval/: __init__.py  diff.py  env.py  runner.py  scoring.py  test_regression.py  types.py
tests/fixtures/: test_email.eml
web/: .env.example  .gitignore  index.html  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  globals.css  middleware.ts  vite-env.d.ts
wip/: 1777492935-mtss-improvements.md
wip/vessel-mismatch/: README.md  extractor_noise.txt  generate.py  mismatch_report.md  typo_mapping.csv  untracked_parking.txt  web_lookup_results.csv  web_lookup_summary.md
(+146 files in other folders)
