[project]
name = "ncl"
version = "0.1.0"
description = "RAG pipeline for email processing with attachments"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Document parsing
    "llama-cloud-services>=0.6.0,<1.0.0",  # LlamaParse for all document types
    # Text chunking
    "langchain-text-splitters>=0.0.1",
    "tiktoken>=0.5.0",  # Token counting for chunker
    # Database and vector storage
    "supabase>=2.0.0",
    "pgvector>=0.2.0",
    "asyncpg>=0.29.0",
    # LLM and embeddings
    "litellm>=1.0.0",
    "openai>=1.0.0",
    # Utilities
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "python-dateutil>=2.8.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "tqdm>=4.65.0",
    # Async support
    "aiofiles>=23.0.0",
    "anyio>=4.0.0",
    "hf-xet>=1.2.0",
    "openai-agents>=0.6.4",
    # Nested async support (required for LlamaParse in async context)
    "nest-asyncio>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
api = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic-ai-slim[openai,ag-ui]>=0.2.0",
    "copilotkit>=0.1.74",
    "python-jose[cryptography]>=3.3.0",
    "slowapi>=0.1.9",
]

[project.scripts]
ncl = "ncl.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ncl"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
