[project]
name = "mtss"
version = "0.1.0"
description = "RAG pipeline for email processing with attachments"
requires-python = ">=3.10"
dependencies = [
    # Document parsing
    "llama-cloud-services>=0.6.0,<1.0.0",  # LlamaParse for all document types
    # Text chunking
    "langchain-text-splitters>=0.0.1",
    "tiktoken>=0.5.0",  # Token counting for chunker
    # Database and vector storage
    "supabase>=2.0.0",
    "pgvector>=0.2.0",
    "asyncpg>=0.29.0",
    # LLM and embeddings
    "litellm>=1.0.0",
    "openai>=1.0.0",
    # Utilities
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "python-dateutil>=2.8.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "tqdm>=4.65.0",
    # Async support
    "aiofiles>=23.0.0",
    "anyio>=4.0.0",
    "hf-xet>=1.2.0",
    "openai-agents>=0.6.4",
    # Nested async support (required for LlamaParse in async context)
    "nest-asyncio>=1.6.0",
    "langgraph-checkpoint-postgres>=3.0.2",
    "psycopg[binary]>=3.3.2",
    "opentelemetry-exporter-otlp-proto-http>=1.39.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]
api = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "langgraph>=0.3.25,<1.0.0",
    "langchain-core>=0.3.0,<1.0.0",
    "langchain-openai>=0.3.0",
    "ag-ui-langgraph>=0.0.22",
    "python-jose[cryptography]>=3.3.0",
    "slowapi>=0.1.9",
    "langfuse>=3.0.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.0.0",
    "opentelemetry-exporter-otlp-proto-http>=1.0.0",
]

[project.scripts]
mtss = "mtss.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mtss"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
