[project]
name = "mtss"
version = "1.0.0"
description = "RAG pipeline for email processing with attachments"
requires-python = ">=3.10"
dependencies = [
    # Database and vector storage
    "supabase>=2.0.0",
    "pgvector>=0.2.0",
    "asyncpg>=0.29.0",
    # LLM and embeddings
    "litellm>=1.83.0",
    "openai>=1.0.0",
    "httpx>=0.25.0",
    "tiktoken>=0.5.0",  # Token counting in embeddings.py (used at query time)
    # Utilities
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "python-dateutil>=2.8.0",
    # Async support
    "aiofiles>=23.0.0",
    "anyio>=4.0.0",
    # API server
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    # LangGraph agent + checkpointer
    "langgraph>=0.3.25,<1.0.0",
    "langchain-core>=0.3.0,<1.0.0",
    "langchain-openai>=0.3.0",
    "langgraph-checkpoint-postgres>=3.0.2",
    "psycopg[binary]>=3.3.2",
    # Auth + rate limiting
    "python-jose[cryptography]>=3.3.0",
    "slowapi>=0.1.9",
    # Observability
    "langfuse>=3.0.0",
    "opentelemetry-exporter-otlp-proto-grpc>=1.0.0",
    "opentelemetry-exporter-otlp-proto-http>=1.39.1",
]

[project.optional-dependencies]
# Ingest-side deps (local CLI + parsers). NOT installed in the API Docker image
# — ingest always runs locally. Install with `uv sync --extra ingest` or
# `pip install -e .[ingest]` when you need to ingest/validate/maintain.
ingest = [
    # Document parsing
    "llama-cloud>=2.0.0,<3.0.0",  # LlamaParse v2 SDK
    "pymupdf4llm>=0.0.17",
    "html2text>=2024.2.26",
    "openpyxl>=3.1.0",
    "python-docx>=1.0.0",
    "extract-msg>=0.48.0",  # Outlook .msg attachments
    "py7zr>=0.21.0",
    "pypdf>=4.0.0",  # PDF page counting (estimate command)
    "olefile>=0.47",  # Legacy Office metadata (estimate command)
    "nest-asyncio>=1.6.0",  # LlamaParse async wrapping
    # Chunking (ingest-side only)
    "langchain-text-splitters>=0.0.1",
    # Topic-merge math + local SQLite store
    "numpy>=1.26.0",
    "scikit-learn>=1.7.2",
    # CLI UX
    "typer>=0.9.0",
    "rich>=13.0.0",
    "tqdm>=4.65.0",
    # HuggingFace xet transport (only touched by ingest-side model loads)
    "hf-xet>=1.2.0",
]

dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
mtss = "mtss.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mtss"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "unit: Unit tests (no external deps)",
    "integration: Integration tests (mocked deps)",
    "slow: Slow running tests",
]
filterwarnings = ["ignore::DeprecationWarning"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
